--- a/thesis/Implementation.lyx
+++ b/thesis/Implementation.lyx
@@ -555,10 +555,6 @@ Write change log, and show it as your changes!
 + Search Translation:
 \end_layout
 
-\begin_layout Section
-Interfaces
-\end_layout
-
 \begin_layout Subsection
 Application Programming Interface
 \end_layout
@@ -575,16 +571,32 @@ For web-based interfaces use Json out put system.
 for desktop-based interfaces use Console interface.
 \end_layout
 
+\begin_layout Standard
+explain how it will be used to build lot of interfaces
+\end_layout
+
 \begin_layout Subsubsection
 JSON output system
 \end_layout
 
+\begin_layout Standard
+How important for Web interfaces
+\end_layout
+
 \begin_layout Subsubsection
-Console Interface (a Linux Daemon service)
+Console commandline (a Linux Daemon service)
+\end_layout
+
+\begin_layout Standard
+How important for Desktop interfaces
+\end_layout
+
+\begin_layout Section
+Interfaces
 \end_layout
 
 \begin_layout Subsection
-Django web interface
+Django web interface (demonstration Interface)
 \end_layout
 
 \begin_layout Standard
