--- a/thesis/Implementation.lyx
+++ b/thesis/Implementation.lyx
@@ -523,6 +523,10 @@ key "ASSEM_MEROUANE"
  are you sure! yes, indeed.
 \end_layout
 
+\begin_layout Standard
+-- Changes from THE PFE PDF
+\end_layout
+
 \begin_layout Section
 Code Architecture
 \end_layout
